--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE HTML>
 <html>
 <head> 
-    <title>Indice: Inicio Web Spring</title> 
+    <title>Inicio Web Spring</title> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <p>Get your greeting <a href="/greeting">here</a></p>
+    <header>
+        <h1>Demonstrativo em Spring Boot</h1>
+    </header>
+    <aside>
+        <p>Página de Saudações <a href="/greeting">here</a></p>
+        <p>Link aside <a href="/greeting">here</a></p>
+        <p>Deveria ser um menu <a href="/greeting">here</a></p>
+    </aside>
+    <div class="container-lg">
+
+    </div>
 </body>
 </html>
