estilos login e pagina links

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,9 +10,7 @@
         <h1>Demonstrativo em Spring Boot</h1>
     </header>
     <aside>
-        <p>Página de Saudações <a href="/greeting">here</a></p>
-        <p>Link aside <a href="/greeting">here</a></p>
-        <p>Deveria ser um menu <a href="/greeting">here</a></p>
+        <p>Página de Saudações <a href="/home">here</a></p>
     </aside>
     <div class="container-lg">
 
