edicao menu e links de paginas html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
         <h1>Demonstrativo em Spring Boot</h1>
     </header>
     <aside>
-        <p>Página de Saudações <a href="/home">here</a></p>
+        <p>Página de Saudações <a href="/home">Home</a></p>
     </aside>
     <div class="container-lg">
 
